test/fail_compilation/fail29.d

void main()
{
//    short a = -32769; // short.min-1
//    byte  b = -129; // byte.min-1
    char  c = -1; // char.min-1
//    wchar D = 65536; // wchar.max+1
//    wchar d = -1; // wchar.min-1
//    dchar E = 1114111; // dchar.max+1
//    dchar e = -1; // dchar.min-1
}
